CSS/eventTwo.css
* {
  box-sizing: border-box;
}
body {
  padding: 0px;
  margin: 0px;
  padding-top: 101px;
}
p {
  padding: 0px;
  margin: 0px;
}
ul {
  padding: 0px;
  margin: 0px;
}
li {
  padding: 0px;
  margin: 0px;
}

h1, h2, h3, h4, h5, h6 {
  padding: 0px;
  margin: 0px;
}
.floatLeft {
  float: left;
}
.floatRight {
  float: right;
}

/*-----------------------------------NAV--------------------------------------*/
nav {
  width: 100%;
  height: 108px;
  border-bottom: solid 1px #998100;
  position: fixed;
  z-index: 50;
  top: 0px;
  background-color: white;
  -webkit-box-shadow: 0px 1px 9px 0px rgba(0,0,0,0.75);
  -moz-box-shadow: 0px 1px 9px 0px rgba(0,0,0,0.75);
  box-shadow: 0px 1px 9px 0px rgba(0,0,0,0.75);
  padding-top: 10px;
  font-family: 'Rajdhani', sans-serif;
}
nav ul {
  width: 100%;
  padding-top: 20px;
  display: none;
  background-color: white;
}
nav ul li {
    display: block;
    text-align: center;
    padding: -27px;
    margin: 6.5px;
    padding: initial;
}
nav ul li a {
  color: #4ab2b2;
  text-decoration: none;
  font-size: 17px;
 }

/*--------------------------BUTTON EFFECT -----------------------*/
.hamburger{
  display: block;
  position: fixed;
  left: 50%;
  -ms-transform: translateX(-50%);
  transform: translateX(-50%);
}
.hamburger img {
  height: 25px;
  width: 25px;
  border: solid 1px #1799B5;
  background-color: #1799B5;

}
.showAppointment {
  display: block;
}
.showAppointment a {
  color: #ef8e89;
}
.stro{
    overflow: hidden;
    float: right;
    margin-right: 71px;
    padding: 5.5px;
    text-align: center;
  display: none;
    float: right;
    position: relative;
    font-size: large;
}
.stro a{
    color: #ef8e89;
    text-decoration: none;
    position: relative;
    /* width: 8vw; */
    padding: 18px;

}
.stro a:after{
  position: absolute;
  bottom: 0;
  left: 0;
  right: 0;
  margin: auto;
  width: 0%;
  content: '.';
  color: transparent;
  background: #aaa;
  height: 1px;
}

.stro a:hover{
  text-decoration: none;
  color:white;
  background-color: #ef8e89;

}

.stro  a:hover:after {
  width: 100%;
}

nav.stroke ul li a,
nav.fill ul li a {
  position: relative;
}
nav.stroke ul li a:after,
nav.fill ul li a:after {
  position: absolute;
  bottom: 0;
  left: 0;
  right: 0;
  margin: auto;
  width: 0%;
  content: '.';
  color: transparent;
  background: #aaa;
  height: 1px;
}
nav.stroke ul li a:hover:after {
  width: 100%;
}

nav.fill ul li a {
  transition: all 2s;
}

nav.fill ul li a:after {
  text-align: left;
  content: '.';
  margin: 0;
  opacity: 0;
}
nav.fill ul li a:hover {
  color: #fff;
  z-index: 1;
}
nav.fill ul li a:hover:after {
  z-index: -10;
  animation: fill 1s forwards;
  -webkit-animation: fill 1s forwards;
  -moz-animation: fill 1s forwards;
  opacity: 1;
}

/*---------------NEED THIS FOR THE HOVER--------------*/
.btn-4:hover:after {
 -webkit-transition: all 550ms cubic-bezier(0.19, 1, 0.22, 1);
  transition: all 550ms cubic-bezier(0.19, 1, 0.22, 1);

}
h5{
      font-weight: 300;
    padding-top: 10px;
    text-align: center;

}
/*END OF FOOTER*/

 /* LI CLASS */
.currentPage a {
  color: white;
}

.float {
    float: left;
    padding-left: 0px;
}
.eventfloat {
  float: left;
}
.clear {
  clear: both;
}
.inline {
  display: inline-block;
  vertical-align: top;
}
.appointment {
  text-decoration: none;
    overflow: hidden;
   float: right;
    margin-right: 57px;
    padding: 8px;
    text-align: center;
    margin-top: 5px;
}

.logo {
  padding-top: 120px;
  text-align: center;
  position: absolute;
  left: 130px;
}

.logo a{
  font-family: "Great Vibes", sans-serif;
  padding-right: 10px;
  text-decoration: none;
}
.logo span {
  font-family: "Great Vibes", sans-serif;
  font-size: 60px;
  padding-right: 60px;
  color: #1db2a3;
  text-decoration: none;
}
.logoNav {
  text-align: center;
}
.logoNav p {
  color: #1799B5;
}
.logoNav a{
  font-family: "Great Vibes", sans-serif;
  font-size: 40px;
  padding-right: 60px;
  text-decoration: none;
  color: #1799B5;
}

.btn {
  color: rgb(125, 114, 81);

    font-weight: 400;
    /*line-height: 22px;*/
    /* margin: 5px auto 3em; */
    /* max-width: 114px; */
    position: relative;
    text-decoration: none;
    text-transform: uppercase;
    /* vertical-align: top; */
    width: 151px;
    font-size: smaller;
    padding: 3.5px;

}

.homeWrapper {
  background-color: rgba(30, 196, 184, 0.1);
  width: 100%;
  padding-bottom: 30px;
  padding-top: 40px;
}
.homeWrapper h1 {
  padding-top: 30px;
  font-family: "Great Vibes", sans-serif;
  color: rgba(30, 196, 184, 0.9);
  text-align: center;
}

.sliderWrapper {
  width: 100%;
  margin: 0 auto;
  overflow: hidden;
}
.designerSliderContainer {
}
.designerSlides {
  text-align: center;
  float: left;
}

.designerSlides img {
  width: 320px;
  height: 400px;
}
.eventWrapper {
  margin-top: 30px;
  text-align: center;
}
.eventContainer {
  background-color: white;
  width: 200px;
  margin: 0 auto;
  margin-bottom: 10px;
  margin: 0 10px;
  margin-top: 20px;
}
.eventImg {
  height: 250px;
  overflow: hidden;
  text-align: center;
}
.eventImg img {
  width: 100%;
  height: 100%;
}
.eventInfo {
  text-align: center;
  padding-top: 5px;
  font-family: 'Rajdhani', sans-serif;

}
.eventName {
  text-align: center;
  margin-bottom: 20px;
  color: rgba(30, 196, 184, 0.9);
  
}
.eventInfo p {
  padding-bottom: 5px;
}
.eventInfo a {
  text-decoration: none;
  color: rgba(30, 196, 184, 0.9);
}
.appoint a{
  color: #ef8e89;
}





footer {
  position: relative;
  padding: 10px;
  background-color: #f9f9f9;
  width: 100vw;
  font-family: 'Rajdhani', sans-serif;
}
#footer-social {
  text-align: center;
}
#footer-social li {
  display: inline-block;
}
.footerContact {
  text-align: center;
}
.footerContact li {
  display: inline-block;
  margin: 5px 20px;
}
footer img {
  height: 25px;
  width: 25px;
  background-color: rgba(30, 196, 184, 0.6);
  border-radius: 50%;
}

@media screen and (min-width: 500px){
/*   .designerSlides img {
    width: 50%
  }*/
  .eventWrapper {
    margin-top: 5px;
    text-align: center;
  }
}


@media screen and (min-width: 600px){
/*   .designerSlides img {
    width: 50%
  }*/
  .homeWrapper {
    background-color: rgba(30, 196, 184, 0.1);
    width: 100%;
    padding-bottom: 30px;
    padding-top: 0px;
  }
}

@media screen and (min-width: 1025px){
  nav {
    width: 100%;
    height: 108px;
    border-bottom: solid 1px #998100;
    position: fixed;
    z-index: 50;
    top: 0px;
    background-color: white;
    -webkit-box-shadow: 0px 1px 9px 0px rgba(0,0,0,0.75);
    -moz-box-shadow: 0px 1px 9px 0px rgba(0,0,0,0.75);
    box-shadow: 0px 1px 9px 0px rgba(0,0,0,0.75);
    padding-top: 10px;
    font-family: 'Rajdhani', sans-serif;

  }
  nav ul {
    width: 100%;
    height: 0px;
    padding-top: 9px;
    display: block;
  }
  nav ul li {
      display: inline-block;
      text-align: center;
      padding: -27px;
      margin: 6.5px;
      padding: initial;
  }
  nav ul li a {
    color: #4ab2b2;
    text-decoration: none;
    font-size: 17px;
   }

  /*--------------------------BUTTON EFFECT -----------------------*/
  .hamburger{
    display: none;
    position: fixed;
    left: 50%;
    -ms-transform: translateX(-50%);
    transform: translateX(-50%);
  }
  .hamburger img {
    height: 25px;
    width: 25px;
  }
  .float {
      float: left;
      padding-left: 22vw;
  }
  .stro{
      overflow: hidden;
      float: right;
      margin-right: 0px;
      padding: 5.5px;
      padding-right: 0px;
      text-align: left;
    display: block;
      float: right;
      position: relative;
      font-size: large;
  }
  .showAppointment {
    display: none;
  }
/*  .designerSlides img {
    width: 40%
  }*/

}

